# MSIS

./: .gitignore  README.md  docker-compose.yml  openapi_dump.json
.trae/specs/integrate-sirchmunk-llm-creation/: checklist.md  spec.md  tasks.md
backend/: .env  .env.example  Dockerfile  README.md  pyproject.toml  sirchmunk_config.yaml
backend/backend/config/: document_library.json
backend/config/: document_library.json
backend/data/sample_docs/: 命令_训练计划.txt  报告_季度工作总结.txt  通知_放假安排.txt
backend/src/: __init__.py  main.py
backend/src/core/: config.py  database.py  dependencies.py
backend/src/creation/: api.py  orchestrator.py  task_manager.py
backend/src/documents/: __init__.py  api.py  config.py  library.py  parsers.py
backend/src/llm/: prompts.py  service.py
backend/src/msis_backend.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
backend/src/search/: __init__.py  api.py  indexer.py  retriever.py  sirchmunk_service.py
backend/src/templates/: __init__.py  api.py  manager.py  models.py  renderer.py
backend/tests/: test_api_search.py  test_api_templates.py  test_config.py  test_indexer.py  test_library.py  test_main.py  test_parsers.py  test_retriever.py  test_template_manager.py  test_template_models.py  test_template_renderer.py
docs/: deployment.md  mvp-verification.md
docs/plans/: 2026-04-19-military-doc-assistant-design.md  2026-04-19-mvp-implementation-plan.md  2026-04-20-document-library-design.md  2026-04-21-document-library-implementation.md  2026-04-21-llm-document-creation-system-design.md
frontend/: index.html  package.json  pnpm-lock.yaml
frontend/src/: App.vue
frontend/src/router/: index.js
frontend/src/views/: CreateDocument.vue  Documents.vue  Home.vue  Search.vue  TemplateEditor.vue  Templates.vue
